Fix lint warnings.